--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="row">
                      <div class="col-sm-12 text-center">
                         <h1 class="large mb-10">Otomatik Kontrol</h1>
-                        <h3 class="mb-10">Ulusal konferansı</h3>
+                        <h3 class="mb-10">Ulusal Konferansı</h3>
                         <p class="uppercase ">12-14 Eylül 2024 - Konya Teknik Üniversitesi Gelişim Yerleşkesi, Selçuklu/Konya </p>
                         <a href="#register" class="but scroll "> Kayıt Ol</a>
                      </div>
@@ -1094,11 +1094,10 @@ Değerli katılımcılarımıza, bu özel atmosferde paylaşacakları bilgi ve d
                      <div class="col-sm-4 col-sm-offset-2">
                         <h2 class="sub-title-3 mb-30">Bağlantılar</h2>
                         <ul class="block-social mt-20">
-                           <li><a href="#"><i class="icon-facebook"></i></a></li>
-                           <li><a href="#"><i class="icon-twitter"></i></a></li>
-                           <li><a href="#"><i class="icon-youtube"></i></a></li>
-                           <li><a href="#"><i class="icon-gplus"></i></a></li>
-                           <li><a href="#"><i class="icon-instagram-1"></i></a></li>
+                           <li><a href="https://www.facebook.com/KTUNEDU/"><i class="icon-facebook"></i></a></li>
+                           <li><a href="https://twitter.com/ktunedu"><i class="icon-twitter"></i></a></li>
+                           <li><a href="https://www.youtube.com/channel/UCnVoJHinCNBfu2UeypZ9frA"><i class="icon-youtube"></i></a></li>
+                           <li><a href="https://www.instagram.com/ktunedu/"><i class="icon-instagram-1"></i></a></li>
                         </ul>
                      </div>
                      <div class="col-sm-4">
