--- a/index.html
+++ b/index.html
@@ -320,6 +320,22 @@ Değerli katılımcılarımıza, bu özel atmosferde paylaşacakları bilgi ve d
          <!--End speakers section-->
          <!--Topics section-->
          <section id="topics" class="topics pt-120 pb-120  brd-bottom">
+            <div class="container">
+               <!--Row-->
+               <div class="row">
+                  <div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
+                     <h1 class="title">Şablonlar</h1>
+                     <br>
+                        TOK word şablonu indirme bağlantısı: 
+                        <a style="color: white;" href="https://tok2022.firat.edu.tr/dosyalar/TOK_Word_Sablon.doc">TOK_Word_Şablon</a>
+                     
+                     <br>
+                     TOK LaTeX şablonu indirme bağlantısı: 
+                     <a style="color: white;" href="https://tok2022.firat.edu.tr/dosyalar/TOK_LaTeX_Sablon.zip">TOK_LATeX_Şablon</a>
+                  </div>
+               </div>
+               <!--End row-->
+            </div>
             <!--Container-->
             <div class="container">
                <!--Row-->
