--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                               </a>
                            </div>
                            <ul>
-                              <li><a class="scroll" href="#">Bildiri Yükleme</a></li>
+                              <li><a class="scroll" href="#yukleme">Bildiri Yükleme</a></li>
                               <li><a class="scroll" href="#">Kayıt</a></li>
                               <li><a class="scroll" href="#about">Hakkında</a></li>
                               <li><a class="scroll" href="#speakers">Davetli Konuşmacılar</a></li>
@@ -324,6 +324,8 @@ Değerli katılımcılarımıza, bu özel atmosferde paylaşacakları bilgi ve d
                <!--Row-->
                <div class="row">
                   <div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
+                     <section id="yukleme" class="">
+                     </section>
                      <h1 class="title">Şablonlar</h1>
                      <br>
                         TOK word şablonu indirme bağlantısı: 
